--- a/src/components/Shared/Home/Sidebar.css
+++ b/src/components/Shared/Home/Sidebar.css
@@ -1,11 +1,9 @@
 .sidebar {
-    position: relative;
+    position: absolute;
     left:0;
-    margin-top: 5rem;
-    width: 3rem;
+    width: 4rem;
+    padding-left: .5rem;
     height: calc(100vh - 5rem);
-
-    display: grid;
 }
 
 .sidebar-link {
@@ -13,8 +11,11 @@
 }
 
 .sidebar-link img {
-    height: 2rem;
+    height: 3rem;
     border: solid;
     border-color: white;
     border-radius: .5rem;
+    padding: .3rem;
+    
+    margin: 1rem 0;
 }
