--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 * {
     padding: 0;
     margin: 0;
+    color: white;
+}
+
+input {
+    color : black;
+}
+
+select {
+    color : black;
 }
 
 body {
