--- a/src/components/Home/Issuer.css
+++ b/src/components/Home/Issuer.css
@@ -39,3 +39,10 @@
 .verify-button {
     background-color: green;
 }
+
+.verifier-back {
+    border-radius: .5rem;
+    padding: .5rem 1rem;
+    margin: .5rem 2rem;
+    background-color: aqua;
+}
