--- a/src/components/Home/Issuer.css
+++ b/src/components/Home/Issuer.css
@@ -46,3 +46,9 @@
     margin: .5rem 2rem;
     background-color: aqua;
 }
+
+.mid-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
